<resources>
    <string name="app_name">Experience sampling</string>

    <string name="action_settings">Settings</string>
    <string name="action_start">Start\nSampling</string>
    <string name="action_end">Save \nSampling</string>
    <string name="add_time_interval">+</string>
    <string name="dashboard_profile">My profile</string>
    <string name="dashboard_answers">My answers</string>
    <string name="dashboard_settings">Settings</string>
    <string name="dashboard_skip">Skip sampling</string>
    <string name="title_activity_question">Sampling questions</string>
    <string name="next">&gt;&gt;</string>
    <string name="back">&lt;&lt;</string>
    <string name="theme">Shopping</string>


    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_settings_details">Time Windows</string>
    <string name="deleteTimeWindow">DELETE</string>
    <string name="settime_start">Start of Time Window</string>
    <string name="settime_end">End of Time Window</string>
    <string name="po">Mon</string>
    <string name="ut">Tue</string>
    <string name="st">Wed</string>
    <string name="ct">Thu</string>
    <string name="pa">Fri</string>
    <string name="so">Sat</string>
    <string name="ne">Sun</string>
    <string name="repeat_days">Repeat in days:</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_answers">My Answers</string>
    <string name="title_activity_themes">Themes</string>


    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>

    <string name="hello_world">Hello world!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
