<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/time_window_settings"
    tools:context="cz.cvut.fel.pda.stm_exs.app.view.fragment.TimeWindowSettingsFragment_">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent" android:layout_height="wrap_content">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/time_window_settings_linear_layout"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/start_end_time"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:entries="@array/settime_array"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginBottom="8dp"/>

                <TextView
                    android:text="@string/repeat_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <cz.cvut.fel.pda.stm_exs.app.view.layout.RowLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:horizontalSpacing="10dp"
                    android:verticalSpacing="20dp">
                    <CheckBox
                        android:id="@+id/po"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:text="@string/po"/>

                    <CheckBox
                        android:id="@+id/ut"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:text="@string/ut"
                        android:layout_marginBottom="15dp"/>

                    <CheckBox
                        android:id="@+id/st"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:text="@string/st"
                        android:layout_marginBottom="15dp"/>

                    <CheckBox
                        android:id="@+id/ct"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:text="@string/ct"
                        android:layout_marginBottom="15dp"/>

                    <CheckBox
                        android:id="@+id/pa"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:text="@string/pa"
                        android:layout_marginBottom="15dp"/>

                    <CheckBox
                        android:id="@+id/so"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:text="@string/so"
                        android:layout_marginBottom="15dp"/>

                    <CheckBox
                        android:id="@+id/ne"
                        android:layout_width="80dp"
                        android:layout_height="30dp"
                        android:text="@string/ne"/>
                </cz.cvut.fel.pda.stm_exs.app.view.layout.RowLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>