<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:text="@string/name"
                    style="@style/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <EditText
                    style="@style/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nameses"/>

            <TextView
                    style="@style/text"
                    android:text="@string/surname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <EditText
                    style="@style/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="von Der Nameson"
                    />

            <TextView
                    style="@style/text"
                    android:text="@string/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <EditText
                    style="@style/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="male"
                    />

            <TextView
                    style="@style/text"
                    android:text="@string/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <EditText
                    style="@style/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25"
                    />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
